# motorTest

./: .gitignore  GMB2804_profile.json  LICENSE  MANIFEST.in  README.md  V2207_1500KV_profile.json  brake.py  generate_index.py  loaded_test.py  motor_profile.json  motor_test.py  no_load_test.py  odrv_board.py  power_supply.py  pyproject.toml  requirements.txt  test_results.py  torque_sensor.py  viewer.html
.github/workflows/: deploy-pages.yml
docs/: README.md  app.js  generate_index.py  index.html  results-index.json
motor_test/: __init__.py  cli.py  config.py
motor_test/config/: config.example.json
motor_test/core/: __init__.py  brake.py  loaded_test.py  no_load_test.py  odrv_board.py  power_supply.py  test_results.py
profile/: Emax_2306_1700KV_profile.json  Emax_2807_1300KV_profile.json  GMB2804_profile.json  V2207_1500KV_profile.json  V2306_1500KV_profile.json  V2808_1300KV_profile.json  motor_profile.json
results/: GMB2804_results.json  V2207_1500KV_results.json
